Fixed table overflowing in sesqli

--- a/sqli_platform/static/style.css
+++ b/sqli_platform/static/style.css
@@ -107,23 +107,6 @@
 
 
 table {
-	border-collapse: collapse;
-	width: 500px;
-	font-family: "Roboto";
-	font-weight: 500;
-    font-size: 20px;
-	margin-left:auto; 
-    margin-right:auto;
-	
-}
-th,td{
-	text-align: left;
-	padding: 8px;
-	font-family: "Roboto";
-	font-weight: 500;
-    font-size: 20px;
-	border-bottom: 1px solid #ddd;
-	border-top: 1px solid #ddd;
-	border-left: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
+    table-layout: fixed;
+	width: 100%;
 }
